# rustor

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  dto.rs  key_bindings.rs  main.rs  mapper.rs  service.rs  util.rs
src/client/: cli_client.rs  http_client.rs  mod.rs
src/dto/: mod.rs  torrent_dto.rs  transmission_dto.rs
src/screen/: add_screen.rs  help_screen.rs  home_screen.rs  info_screen.rs  key_bindings_block.rs  mod.rs  reann_screen.rs  rm_screen.rs  search_info_screen.rs  search_res_screen.rs  search_screen.rs
src/service/: mod.rs  torrent_service.rs  transmission_service.rs
src/ui/: mod.rs  screen_add.rs  screen_del.rs  screen_help.rs  screen_home.rs  screen_info.rs  screen_reann.rs  screen_rm.rs
src/ui/view/: mod.rs  view_key_bindings.rs  view_torrent.rs
