[package]
name = "rustor"
version = "0.1.0"
description = "A TUI for transmission-remote"
authors = ["gmagkanaris <g.magkanaris@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
tui-input = "0.14.0"
clap = { version = "4.5.53", features = ["derive"] }
tui-scrollview = "0.5.3"