[package]
name = "rustor"
version = "1.0.0-alpha.2"
description = "A TUI for transmission-remote"
authors = ["gmagk <tbuhtexis@yahoo.com>"]
license = "MIT"
edition = "2024"

[dependencies]

## [arti-client: static-sqlite]
## This is required otherwise it will try to use a cargo sqlite which if has not been installed locally it will produce
## the error `rust-lld: error: unable to find library -lsqlite3`
## https://github.com/narodnik/arti/blob/main/crates/arti-client/README.md#build-flag-related-features
#arti-client = {  version = "0.37.0", features = ["static-sqlite"] }
#http = "1.4.0"
#httparse = "1.10.1"
#tor-rtcompat = "0.37.0"

crossterm = "0.28.1"
ratatui = "0.29.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
tui-input = "0.14.0"
clap = { version = "4.5.53", features = ["derive"] }
tui-scrollview = "0.5.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.9.10+spec-1.1.0"